@@ -4359,7 +4359,7 @@ will add to the (now empty) default-target list
 like normal.
 
 .TP
-.RI DefaultEnvironment()
+.RI DefaultEnvironment([ args ])
 Creates and returns a default construction environment object.
 This construction environment is used internally by SCons
 in order to fetch source files transparently
